# fastapi-beyond-crud

./: README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2783ad23d2c1_update_book.py  3f080f0f41f7_upgrade_user.py  4252ad0be5aa_update_book.py  66904d028513_add_roles_to_users.py  7308b90f3f88_add_user.py  afa914441540_init.py  c3c3c3d2675e_add_user.py  e4effe662761_hero.py  e7092947c3ae_add_review.py
src/: __init__.py  config.py  database.py  main.py  services.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
src/books/: models.py  router.py  schemas.py  service.py
src/dev/: router.py
src/hero/: models.py  router.py
src/reviews/: models.py  routes.py  service.py
src/tests/: conftest.py  mock_conftest.py  test_auth.py
